<resources>
    <string name="app_name">ImQuarantined</string>
    <string name="facebook_application_id" translatable="false">263523148010812</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb263523148010812</string>
    <string name="facebook_app_key_hash" translatable="false">Bc/RYaU3Tvgxx0l7pZhKXM7tjSI=</string>
    <string name="denied_location_permission">Hey There! Looks like you have denied location permission. We dont do that here 🙂 Not cool 🙂 Please enable your location settings.</string>
    <string name="enable_gps_to_proceed">Please enable GPS. Otherwise, we cannot proceed 😩 😭  </string>
    <string name="select_permissions_and_allow">Please select \"Permissions\" and allow the required permissions. 🙂🙂🙂🙂🙂</string>

    <!--NOTIFICATIONS-->
    <string name="title_notification_gps_off">We got an eye on you 🧐</string>
    <string name="body_notification_gps_off">Are you🧐 trying to sneak out? 😈👎👎</string>
    <string name="extras_notification_gps_off"><b>Enable your GPS RIGHT NOW</b> or you will be missing out on so much !</string>
    <string name="title_notification_endless_bg_task">Looking Good 🤩😌</string>
    <string name="body_notification_endless_bg_task">STAY at HOME with us and SAVE the WORLD 😌</string>
    <string name="title_notification_failed_streak">You went OUT !</string>
    <string name="body_notification_failed_streak">Your streak ended today at #failed_at#</string>
    <string name="extras_notification_failed_streak">Starting new streak from now.</string>
    <string name="click_here_for_details"><B>Click Here</B> for Details</string>


    <string name="days_quarantined">Days Quarantined</string>
    <string name="label_highest_streak">Highest Streak</string>
    <string name="db_name">imquarantined_db</string>
    <string name="app_splash_name">ImQuarantined\n✌✌✌✌✌✌</string>
    <string name="label_total_points">Total Points</string>
    <string name="label_current_streak">Current Streak</string>
    <string name="txt_connection_not_available">There is a problem with your internet connection! Please try to reconnect. 🙂</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_network_problem">Network Problem</string>
    <string name="invalid_email_exception">Invalid Email !</string>
    <string name="extras_notification_endless_bg_task">Keep STAYING at HOME, you closing down on a new STREAK!</string>

</resources>
