<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp50"
            android:paddingBottom="@dimen/dp50">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_no_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/no_network"
                app:lottie_loop="false"
                app:lottie_autoPlay="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_space"
                android:paddingEnd="@dimen/default_space"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/txt_network_problem"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                android:gravity="center"
                android:letterSpacing="0.02"
                app:layout_constraintTop_toBottomOf="@+id/anim_no_network"
                app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"/>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_space"
                android:paddingEnd="@dimen/default_space"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/txt_connection_not_available"
                android:textColor="@color/color2F2F2F"
                android:textSize="@dimen/sp16"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintBottom_toTopOf="@+id/tv_message"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_space"
                android:paddingEnd="@dimen/default_space"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/txt_connection_not_available"
                android:textColor="@color/color2F2F2F"
                android:textSize="@dimen/sp14"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                app:layout_constraintBottom_toTopOf="@+id/btn_action"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_action"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:paddingTop="@dimen/dp15"
                android:paddingBottom="@dimen/dp15"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/txt_refresh"
                app:cornerRadius="@dimen/dp30"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_message"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>