<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimaryDark">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="@dimen/dp64"
                android:contentDescription="ProfileImage"
                android:src="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorPrimary"
                tools:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/img_user_photo"
                tools:text="Ashiqur Rahman" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:textAlignment="center"
                android:textSize="@dimen/sp14"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name"
                tools:text="ashiqur.buet16@gmail.com" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_label_total_pts"
            android:layout_width="@dimen/dp230"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_right_border"
            android:text="@string/label_total_points"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/tv_total_pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            tools:text="32031"
            app:layout_constraintStart_toEndOf="@id/tv_label_total_pts"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_total_pts"
            app:layout_constraintTop_toBottomOf="@id/header"/>

        <TextView
            android:id="@+id/tv_label_current_streak"
            android:layout_width="@dimen/dp230"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_right_border"
            android:text="@string/label_current_streak"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_total_pts" />

        <TextView
            android:id="@+id/tv_current_streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            tools:text="3"
            app:layout_constraintStart_toEndOf="@id/tv_label_current_streak"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_current_streak"
            app:layout_constraintTop_toBottomOf="@id/tv_label_total_pts"/>

        <TextView
            android:id="@+id/tv_label_days_quarantined"
            android:layout_width="@dimen/dp230"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_right_border"
            android:text="@string/days_quarantined"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_current_streak" />

        <TextView
            android:id="@+id/tv_days_quarantined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            tools:text="15"
            app:layout_constraintStart_toEndOf="@id/tv_label_days_quarantined"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_days_quarantined"
            app:layout_constraintTop_toBottomOf="@id/tv_label_current_streak"/>


        <TextView
            android:id="@+id/tv_label_highest_streak"
            android:layout_width="@dimen/dp230"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_right_border"
            android:text="@string/label_highest_streak"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_days_quarantined" />

        <TextView
            android:id="@+id/tv_highest_streak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            tools:text="5"
            app:layout_constraintStart_toEndOf="@id/tv_label_highest_streak"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_highest_streak"
            app:layout_constraintTop_toBottomOf="@id/tv_label_days_quarantined"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
